Fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,16 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  max-width: 60%;
+  max-width: 1140px;
   margin: 0 auto;
   background-color: white;
+  padding-bottom: 100px;
+  position: relative;
 }
 
-section {
+/* section {
   padding: 50px 20px;
-}
+} */
 
 button {
   padding: 10px 20px;
@@ -100,7 +102,10 @@ button {
 .invoice {
   width: 100%;
   height: 100%;
-  border: 1px solid;
+  border: 0px solid;
+  padding: 10px !important;
+  
+  /* max-width: 495px; */
 }
 .invoice .payeeDetails {
   display: flex;
